Add other party link from dashboard

--- a/src/main/features/claim/views/macro/about-claim-widget.njk
+++ b/src/main/features/claim/views/macro/about-claim-widget.njk
@@ -15,7 +15,7 @@
   <ul class="font-xsmall list">
     <li>
       <strong class="bold">{{ t(otherPartyLabel) }}</strong>
-      <div>{{ otherPartyName }}</div>
+      <div><a href="contact-them">{{ otherPartyName }}</a></div>
     </li>
     <li>
       <strong class="bold">{{ t('Claim amount:') }}</strong>
