--- a/src/main/features/response/views/check-and-send.njk
+++ b/src/main/features/response/views/check-and-send.njk
@@ -184,17 +184,6 @@
 
         {{ tableEnd() }}
       {% endif %}
-
-      {{ tableStart('freeMediation', 'Free mediation') }}
-      {{
-          row(
-            label = 'Will you try mediation?',
-            value = t(draft.freeMediation.option) | capitalize,
-            changeLink = ResponsePaths.freeMediationPage.evaluateUri({ externalId: claim.externalId }),
-            bold = true
-          )
-      }}
-      {{ tableEnd() }}
     {% endif %}
 
     {% if draft.isResponseRejectedFullyWithDispute() %}
@@ -225,9 +214,9 @@
       {% include "./statement-of-means/check-and-send.njk" %}
     {% endif %}
 
-    {% if draft.isResponseRejectedFullyWithDispute() %}
+    {% if draft.isResponseRejectedFullyWithDispute() or draft.isResponsePartiallyAdmittedAndAlreadyPaid() %}
       {{ tableStart('freeMediation', 'Free mediation') }}
-      {{ row(label = 'Free mediation', value = t(draft.freeMediation.option) | capitalize, changeLink = ResponsePaths.freeMediationPage.evaluateUri({ externalId: claim.externalId }), bold = true) }}
+      {{ row(label = 'Will you try mediation?', value = t(draft.freeMediation.option) | capitalize, changeLink = ResponsePaths.freeMediationPage.evaluateUri({ externalId: claim.externalId }), bold = true) }}
       {{ tableEnd() }}
     {% endif %}
 
