--- a/src/main/features/claimant-response/views/choose-how-to-proceed.njk
+++ b/src/main/features/claimant-response/views/choose-how-to-proceed.njk
@@ -1,4 +1,5 @@
 {% extends "layout.njk" %}
+
 {% from "form.njk" import csrfProtection, radioOption, saveAndContinueButton, errorSummary %}
 
 {% set heading = 'Choose how to proceed' %}
@@ -11,23 +12,32 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
-      <form method="post" class="analytics-submit-event-trigger"
-            data-event-label-from="option"
-            novalidate>
+      <form method="post" class="analytics-submit-event-trigger" data-event-label-from="option" novalidate>
         {{ csrfProtection(csrf) }}
 
         {{
-        radioOption(form = form, label = 'Sign a settlement agreement', name = 'option', value = ChooseHowToProceedOption.SIGN_SETTLEMENT_AGREEMENT,
+        radioOption(
+          form = form, 
+          label = 'Sign a settlement agreement', 
+          name = 'option', 
+          value = FormaliseRepaymentPlanOption.SIGN_SETTLEMENT_AGREEMENT,
           hint='This is a legal agreement between you and the defendant agreeing to the repayment plan. If they break it you can request a County Court Judgment.',
-          checked = false, bold = true)
+          checked = false, 
+          bold = true
+          )
         }}
 
         {{
-        radioOption(form = form, label = 'Request a County Court Judgment (CCJ)', name = 'option', value = ChooseHowToProceedOption.REQUEST_COUNTY_COURT_JUDGEMENT,
+        radioOption(
+          form = form, 
+          label = 'Request a County Court Judgment (CCJ)', 
+          name = 'option', 
+          value = FormaliseRepaymentPlanOption.REQUEST_COUNTY_COURT_JUDGEMENT,
           hint='You can ask the court to make a formal order binding the defendant to the repayment plan. This adds the defendant to the CCJ register, which may make it more difficult for them to borrow money to repay you.',
-          checked = false, bold = true)
+          checked = false, 
+          bold = true
+          )
         }}
-
 
         <div class="form-group">
           {{ saveAndContinueButton() }}
