--- a/src/main/features/dashboard/views/contact-them.njk
+++ b/src/main/features/dashboard/views/contact-them.njk
@@ -2,48 +2,49 @@
 {% from "./macro/caseHistory.njk" import caseHistoryForClaimantClaimDetails %}
 {% from "../../claim/views/macro/about-claim-widget.njk" import aboutClaimWidget %}
 
-
 {% set headingVisible = false %}
 {% set heading = 'Claim status' %}
 
 {% if user.id === claim.claimantId %}
   {% set otherParty = 'Defendant:' %}
   {% set otherPartyName = claim.claimData.defendant.name %}
-  {% set phone = claim.claimData.claimant.mobilePhone %}
-  {% set email = claim.claimantEmail %}
-
-  {% if claim.claimData.claimant.correspondenceAddress != null %}
-    {% set line1 = claim.claimData.claimant.correspondenceAddress.line1 %}
-    {% set line2 = claim.claimData.claimant.correspondenceAddress.line2 %}
-    {% set line3 = claim.claimData.claimant.correspondenceAddress.line3 %}
-    {% set city = claim.claimData.claimant.correspondenceAddress.city %}
-    {% set postcode = claim.claimData.claimant.correspondenceAddress.postcode %}
-  {% else %}
-    {% set line1 = claim.claimData.claimant.address.line1 %}
-    {% set line2 = claim.claimData.claimant.address.line2 %}
-    {% set line3 = claim.claimData.claimant.address.line3 %}
-    {% set city = claim.claimData.claimant.address.city %}
-    {% set postcode = claim.claimData.claimant.address.postcode %}
-  {% endif %}
-
-  {% elif user.id === claim.defendantId %}
-  {% set otherParty = 'Claimant' %}
-  {% set otherPartyName = claim.claimData.claimant.name %}
-  {% set phone = claim.response.defendant.mobilePhone %}
+  {% set phone = claim.claimData.defendant.mobilePhone %}
   {% set email = claim.claimData.defendant.email %}
+  {% set correspondenceAddress = claim.claimData.defendant.correspondenceAddress %}
 
-  {% if claim.claimData.defendant.correspondenceAddress != null %}
-    {% set line1 = claim.claimData.defendant.correspondenceAddress.line1 %}
-    {% set line2 = claim.claimData.defendant.correspondenceAddress.line2 %}
-    {% set line3 = claim.claimData.defendant.correspondenceAddress.line3 %}
-    {% set city = claim.claimData.defendant.correspondenceAddress.city %}
-    {% set postcode = claim.claimData.defendant.correspondenceAddress.postcode %}
+  {% if correspondenceAddress == null %}
+    {% set line1 = claim.claimData.defendant.address.line1 %}
+    {% set line2 = claim.claimData.defendant.address.line2 %}
+    {% set line3 = claim.claimData.defendant.address.line3 %}
+    {% set city = claim.claimData.defendant.address.city %}
+    {% set postcode = claim.claimData.defendant.address.postcode %}
   {% else %}
     {% set line1 = claim.response.defendant.correspondenceAddress.line1 %}
     {% set line2 = claim.response.defendant.correspondenceAddress.line2 %}
     {% set line3 = claim.response.defendant.correspondenceAddress.line3 %}
     {% set city = claim.response.defendant.correspondenceAddress.city %}
     {% set postcode = claim.response.defendant.correspondenceAddress.postcode %}
+  {% endif %}
+
+  {% elif user.id === claim.defendantId %}
+  {% set otherParty = 'Claimant:' %}
+  {% set otherPartyName = claim.claimData.claimant.name %}
+  {% set phone = claim.claimData.claimant.mobilePhone %}
+  {% set email = claim.claimantEmail %}
+  {% set correspondenceAddress = claim.claimData.claimant.correspondenceAddress != null %}
+
+  {% if claim.claimData.claimant.correspondenceAddress == null %}
+    {% set line1 = claim.claimData.claimant.address.line1 %}
+    {% set line2 = claim.claimData.claimant.address.line2 %}
+    {% set line3 = claim.claimData.claimant.address.line3 %}
+    {% set city = claim.claimData.claimant.address.city %}
+    {% set postcode = claim.claimData.claimant.address.postcode %}
+  {% else %}
+    {% set line1 = claim.claimData.claimant.correspondenceAddress.line1 %}
+    {% set line2 = claim.claimData.claimant.correspondenceAddress.line2 %}
+    {% set line3 = claim.claimData.claimant.correspondenceAddress.line3 %}
+    {% set city = claim.claimData.claimant.correspondenceAddress.city %}
+    {% set postcode = claim.claimData.claimant.correspondenceAddress.postcode %}
   {% endif %}
 
 {% endif %}
@@ -57,6 +58,7 @@
       </h1>
 
       <div>
+
         {% if line1 != null %}
           <br>
           {{ line1 }}
