--- a/src/main/features/response/views/confirmation/full-admission.njk
+++ b/src/main/features/response/views/confirmation/full-admission.njk
@@ -1,13 +1,13 @@
 {% set claimantName = claim.claimData.claimant.name %}
 {% set claimantDetailsPageURI = ClaimPaths.claimantDetailsPage.evaluateUri({ externalId: claim.externalId }) %}
 
-{% if claim.response.paymentOption === domain.PaymentOption.IMMEDIATELY %}
+{% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
   <p>{{ t('We’ve emailed {{ claimantName }} to tell them you’ll pay immediately.', { claimantName: claimantName }) }}</p>
 
   <p>{{ t('You need to make sure that:') }}</p>
 
   <ul class="list list-bullet">
-    <li>{{ t('they get the money before 4pm on {{ paymentDate }} - they can request a County Court Judgment against you if not', { paymentDate: claim.response.paymentDate | date }) }}</li>
+    <li>{{ t('they get the money before 4pm on {{ paymentDate }} - they can request a County Court Judgment against you if not', { paymentDate: claim.response.paymentIntention.paymentDate | date }) }}</li>
     <li>{{ t('any cheques or bank transfers are clear in their account by the deadline') }}</li>
     <li>{{ t('you get a receipt for any payments') }}</li>
   </ul>
@@ -15,11 +15,11 @@
   <p>{{ t('<a href="{{ link }}">Contact {{ claimantName }}</a> if you need their payment details.', { claimantName: claimantName, link: claimantDetailsPageURI }) | safe }}</p>
 {% endif %}
 
-{% if claim.response.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+{% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
   <p>{{ t('We’ve emailed {{ claimantName }} your offer to pay by {{ paymentDate }} and your explanation of why you can’t pay before then.',
-      { claimantName: claimantName, paymentDate: claim.response.paymentDate | date }) }}</p>
+      { claimantName: claimantName, paymentDate: claim.response.paymentIntention.paymentDate | date }) }}</p>
 {% endif %}
 
-{% if claim.response.paymentOption === domain.PaymentOption.INSTALMENTS %}
+{% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
   <p>{{ t('We’ve emailed {{ claimantName }} to tell them you’ve suggested paying by instalments.', { claimantName: claimantName }) }}</p>
 {% endif %}
